@@ -27,7 +27,11 @@
 namespace SlimDX
 {
 	namespace Direct3D11
-	{	
+	{
+		/// <summary>
+		/// Provides a description for an unordered access view.
+		/// </summary>
+		/// <unmanaged>D3D11_SHADER_RESOURCE_VIEW_DESC</unmanaged>
 		public value class UnorderedAccessViewDescription : System::IEquatable<UnorderedAccessViewDescription>
 		{				
 		internal:
@@ -36,23 +40,99 @@ namespace SlimDX
 			D3D11_UNORDERED_ACCESS_VIEW_DESC CreateNativeVersion();
 		
 		public:
+			/// <summary>
+			/// The format of the data in the unordered access buffer.
+			/// </summary>
 			property DXGI::Format Format;
+
+			/// <summary>
+			/// The resource type, which specifies how the resource will be accessed.
+			/// </summary>
 			property UnorderedAccessViewDimension Dimension;
+
+			/// <summary>
+			/// The zero-based index of the first element to be accessed.
+			/// </summary>
 			property int FirstElement;
+
+			/// <summary>
+			/// The number of elements in the resource. For structured buffers, this is the number of structures in the buffer.
+			/// </summary>
 			property int ElementCount;
+
+			/// <summary>
+			/// View options for the resource.
+			/// </summary>
 			property UnorderedAccessViewBufferFlags Flags;
+
+			/// <summary>
+			/// The mipmap slice index.
+			/// </summary>
 			property int MipSlice;
+
+			/// <summary>
+			/// The zero-based index of the first array slice to be accessed. 
+			/// </summary>
 			property int FirstArraySlice;
+
+			/// <summary>
+			/// The number of slices in the array.
+			/// </summary>
 			property int ArraySize;
+
+			/// <summary>
+			/// The zero-based index of the first depth slice to be accessed.
+			/// </summary>
 			property int FirstDepthSlice;
+
+			/// <summary>
+			/// The number of depth slices.
+			/// </summary>
 			property int DepthSliceCount;
 
+			/// <summary>
+			/// Tests for equality between two objects.
+			/// </summary>
+			/// <param name="left">The first value to compare.</param>
+			/// <param name="right">The second value to compare.</param>
+			/// <returns><c>true</c> if <paramref name="left"/> has the same value as <paramref name="right"/>; otherwise, <c>false</c>.</returns>
 			static bool operator == ( UnorderedAccessViewDescription left, UnorderedAccessViewDescription right );
+
+			/// <summary>
+			/// Tests for inequality between two objects.
+			/// </summary>
+			/// <param name="left">The first value to compare.</param>
+			/// <param name="right">The second value to compare.</param>
+			/// <returns><c>true</c> if <paramref name="left"/> has a different value than <paramref name="right"/>; otherwise, <c>false</c>.</returns>
 			static bool operator != ( UnorderedAccessViewDescription left, UnorderedAccessViewDescription right );
 
+			/// <summary>
+			/// Returns the hash code for this instance.
+			/// </summary>
+			/// <returns>A 32-bit signed integer hash code.</returns>
 			virtual int GetHashCode() override;
+
+			/// <summary>
+			/// Returns a value that indicates whether the current instance is equal to a specified object. 
+			/// </summary>
+			/// <param name="obj">Object to make the comparison with.</param>
+			/// <returns><c>true</c> if the current instance is equal to the specified object; <c>false</c> otherwise.</returns>
 			virtual bool Equals( System::Object^ obj ) override;
+
+			/// <summary>
+			/// Returns a value that indicates whether the current instance is equal to the specified object. 
+			/// </summary>
+			/// <param name="other">Object to make the comparison with.</param>
+			/// <returns><c>true</c> if the current instance is equal to the specified object; <c>false</c> otherwise.</returns>
 			virtual bool Equals( UnorderedAccessViewDescription other );
+
+			/// <summary>
+			/// Determines whether the specified object instances are considered equal. 
+			/// </summary>
+			/// <param name="value1">The first value to compare.</param>
+			/// <param name="value2">The second value to compare.</param>
+			/// <returns><c>true</c> if <paramref name="value1"/> is the same instance as <paramref name="value2"/> or 
+			/// if both are <c>null</c> references or if <c>value1.Equals(value2)</c> returns <c>true</c>; otherwise, <c>false</c>.</returns>
 			static bool Equals( UnorderedAccessViewDescription% value1, UnorderedAccessViewDescription% value2 );
 		};
 	}
